switched to maven, upgraded dependencies and tollerate unavailable network during startup